@@ -371,6 +371,8 @@ Version 2.1.2
 
 Version 3.0.0
 
++ Add RubyEnumerable#tally and RubyLazyEnumerator#tally
+
 + Add RubyArray#filter
 
 + Add RubyArray#filter(Predicate)
